# ecs_gen

./: CMakeLists.txt  README.md
includes/: sxt_head.hpp
src/: main.cpp
