cmake_minimum_required(VERSION 3.30)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_C_STANDARD 11)

project(ecs_gen)
set(SOURCE_ecs_gen)
file(GLOB SOURCE_ecs_gen "src/*.cpp")
if(WIN32)
add_executable(ecs_gen ${SOURCE_ecs_gen})
elseif(UNIX)
add_executable(ecs_gen ${SOURCE_ecs_gen})
else()
message("Unknown platform")
endif()
target_include_directories(ecs_gen PRIVATE "./includes")

# project(result_some)
# set(SOURCE_result_some)
# file(GLOB SOURCE_result_some "*.c")
# if(WIN32)
# add_executable(result_some ${SOURCE_result_some})
# elseif(UNIX)
# add_executable(result_some ${SOURCE_result_some})
# else()
# message("Unknown platform")
# endif()